<resources>
    <string name="app_name">Trivia</string>
    <string name="trivia">Trivia</string>
    <string name="a_true">A. True</string>
    <string name="b_false">B. False</string>
    <string name="back_button">Back button</string>
    <string name="next_button">Next button</string>
    <string name="_0_out_of_1000">0 out of 1000</string>
    <string name="correct_answer">That\'s Correct</string>
    <string name="wrong_answer">That\'s Wrong</string>
</resources>